--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="authorize">Authorize</string>
     <string name="signin">Allow</string>
     <string name="skip">Skip</string>
-    <string name="select_account">Select An Account</string>
+    <string name="choose_account">Choose Account</string>
     
     
-    <string name="sign_in_msg">TicTacToe requires your Google account credentials</string>
+    <string name="sign_in_msg">TicTacToe uses your Google account to connect and play with friends</string>
 	<string name="sign_in_no_connectivity">TicTacToe requires a working Internet connection</string>
 </resources>
